# gql-app

./: pyproject.toml  requirements.txt
gql_app/: app.py
gql_app/db/: data.py  database.py  models.py
gql_app/gql/: mutations.py  queries.py  types.py
gql_app/gql/emmployers/: mutations.py  queries.py  types.py
gql_app/gql/job/: mutations.py  queries.py  types.py
